--- a/manifest.json
+++ b/manifest.json
@@ -24,6 +24,26 @@
   ],
   "categories": ["education", "productivity"],
   "screenshots": [],
+  "widgets": [
+    {
+      "name": "StudyBoard Quick View",
+      "short_name": "Stats",
+      "description": "Vista rápida de tus estadísticas académicas",
+      "tag": "studyboard_stats",
+      "template": "studyboard_stats_template",
+      "ms_ac_template": "widget.html",
+      "data": "widget-data.json",
+      "type": "application/json",
+      "screenshots": [],
+      "icons": [{
+        "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='96' height='96'%3E%3Crect width='96' height='96' rx='20' fill='%236366f1'/%3E%3Ctext x='48' y='65' font-size='50' text-anchor='middle'%3E📊%3C/text%3E%3C/svg%3E",
+        "sizes": "96x96",
+        "type": "image/svg+xml"
+      }],
+      "auth": false,
+      "update": 1800
+    }
+  ],
   "shortcuts": [
     {
       "name": "Ver asignaturas",
